@@ -486,6 +486,9 @@ Release 0.5.0 -  Unreleased
     HIVE-1183. hive.hwi.war.file vanished from hive-default.xml
     (Zheng Shao via namit)
 
+    HIVE-1185. Fix RCFile resource leak when opening a non-RCFile.
+    (He Yongqiang via zshao)
+
 Release 0.4.0 -  Unreleased
 
   INCOMPATIBLE CHANGES
